# LangGraph_Trails

./: .gitignore  Basic_Tryout.ipynb  Practice_Command_Routing.py  Practice_IntentClassifier.ipynb  Practice_Light.py  Practice_Parallel_Check.ipynb  Practice_ReActToolCall_manual_trails.py  Practice_Reasoning.ipynb  Practice_Reducer_BasicsChecks.ipynb  Practice_Reflection_QA.py  Practice_SimpleCheckpointer.ipynb  Practice_SimpleTravelPlan.py  Practice_State_Hierarchy_Check.ipynb  Practice_Subgraph_As_Node.ipynb  Practice_Subgraph_Invoke.ipynb  Practice_reducer_fan_in_out.ipynb  langgraph.json  main.py  pyproject.toml  requirements.txt
.claude/skills/blog_post/: SKILL.md
