[project]
name = "langgraph-trails"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "community>=1.0.0b1",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "langgraph-api>=0.9.0",
    "langgraph-cli>=0.4.27",
    "langgraph-sdk>=0.3.9",
    "langsmith>=0.7.14",
    "marshmallow>=3.26.2",
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tornado>=6.5.4",
]

[tool.uv]
native-tls = true
