[project]
name = "langgraph-trails"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "community>=1.0.0b1",
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "grpcio>=1.80.0",
    "grpcio-health-checking>=1.80.0",
    "grpcio-tools>=1.80.0",
    "importlib-metadata>=8.7.1",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "jsonschema-rs>=0.44.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "langgraph-api>=0.9.0",
    "langgraph-cli>=0.4.27",
    "langgraph-sdk>=0.3.9",
    "langsmith>=0.7.14",
    "marshmallow>=3.26.2",
    "ollama>=0.6.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp-proto-common>=1.37.0",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-proto>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "pillow>=12.2.0",
    "protobuf>=6.33.6",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sse-starlette>=3.3.4",
    "structlog>=25.5.0",
    "tornado>=6.5.4",
    "websockets>=15.0.1",
]

[tool.uv]
native-tls = true
